Complete Book-Publisher association
