# src/controllers/book.controller.js
@@ -46,10 +46,10 @@ class TitleController {
   async addBook(req, res, next) {
     try {
       const { name, anotherName, titleId,
-        translatorIds, languageId, ISBN, quarto, cover,
+        translatorIds, publisherId, languageId, ISBN, quarto, cover,
         pagesNumber, publishedAt, publishSeries, weight, stock, price, bookImages } = req.body;
         
-      const newBook = await this.#Service.addBook({ name, anotherName, titleId, languageId, translatorIds, ISBN, quarto, cover,
+      const newBook = await this.#Service.addBook({ name, anotherName, titleId, translatorIds, publisherId, languageId, ISBN, quarto, cover,
                                                 pagesNumber, publishedAt, publishSeries, weight, stock, price, bookImages });
       return res.status(201).json(newBook);
     } catch (error) {
